# wake-word-detector

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  start-wake-word.cmd
tests/: test_config.py  test_vad.py  test_wake_detector.py
wake_word_detector/: __init__.py  __main__.py  actions.py  audio_capture.py  config.py  main.py  runtime.py  transcriber.py  vad.py  wake_detector.py
