[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wake-word-detector"
version = "0.1.0"
description = "Offline wake-word detector using faster-whisper and local microphone audio."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
wake-word-detector = "wake_word_detector.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
